// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List renders ordered list 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <ol
      class="PicassoList-root PicassoList-firstLevel"
      data-testid="ordered-list"
    >
      <li
        class=""
        index="0"
      >
        <div
          class="PicassoContainer-flex PicassoListItem-listContainer"
        >
          <div
            class="MuiTypography-root PicassoTypography-bodyMedium PicassoListItem-content MuiTypography-body1"
          >
            list item N1
          </div>
        </div>
      </li>
      <li
        class=""
        index="1"
      >
        <div
          class="PicassoContainer-flex PicassoListItem-listContainer"
        >
          <div
            class="MuiTypography-root PicassoTypography-bodyMedium PicassoListItem-content MuiTypography-body1"
          >
            list item N2
          </div>
        </div>
      </li>
      <li
        class=""
        index="2"
      >
        <div
          class="PicassoContainer-flex PicassoListItem-listContainer"
        >
          <div
            class="MuiTypography-root PicassoTypography-bodyMedium PicassoListItem-content MuiTypography-body1"
          >
            list item N3
          </div>
        </div>
      </li>
      <li
        class=""
        index="3"
      >
        <div
          class="PicassoContainer-flex PicassoListItem-listContainer"
        >
          <div
            class="MuiTypography-root PicassoTypography-bodyMedium PicassoListItem-content MuiTypography-body1"
          >
            list item N4
          </div>
        </div>
      </li>
      <li
        class=""
        index="4"
      >
        <div
          class="PicassoContainer-flex PicassoListItem-listContainer"
        >
          <div
            class="MuiTypography-root PicassoTypography-bodyMedium PicassoListItem-content MuiTypography-body1"
          >
            list item N5
          </div>
        </div>
      </li>
    </ol>
  </div>
</div>
`;

exports[`List renders unordered list 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <ul
      class="PicassoList-root PicassoList-unordered PicassoList-firstLevel PicassoList-disc"
      data-testid="unordered-list"
    >
      <li
        class=""
        index="0"
      >
        <div
          class="PicassoContainer-flex PicassoListItem-listContainer"
        >
          <div
            class="MuiTypography-root PicassoTypography-bodyMedium PicassoListItem-content MuiTypography-body1"
          >
            list item N1
          </div>
        </div>
      </li>
      <li
        class=""
        index="1"
      >
        <div
          class="PicassoContainer-flex PicassoListItem-listContainer"
        >
          <div
            class="MuiTypography-root PicassoTypography-bodyMedium PicassoListItem-content MuiTypography-body1"
          >
            list item N2
          </div>
        </div>
      </li>
      <li
        class=""
        index="2"
      >
        <div
          class="PicassoContainer-flex PicassoListItem-listContainer"
        >
          <div
            class="MuiTypography-root PicassoTypography-bodyMedium PicassoListItem-content MuiTypography-body1"
          >
            list item N3
          </div>
        </div>
      </li>
      <li
        class=""
        index="3"
      >
        <div
          class="PicassoContainer-flex PicassoListItem-listContainer"
        >
          <div
            class="MuiTypography-root PicassoTypography-bodyMedium PicassoListItem-content MuiTypography-body1"
          >
            list item N4
          </div>
        </div>
      </li>
      <li
        class=""
        index="4"
      >
        <div
          class="PicassoContainer-flex PicassoListItem-listContainer"
        >
          <div
            class="MuiTypography-root PicassoTypography-bodyMedium PicassoListItem-content MuiTypography-body1"
          >
            list item N5
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;
